<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true"
    android:overScrollMode="always"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/colorlistado"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/bar_editar_tipo"
                android:textStyle="bold">
            </TextView>

            <Spinner
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/categorias" >
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/bar_editar_nombre"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/libro_editar_nombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bar_editar_nombre" >
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/bar_editar_direccion"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/libro_editar_direccion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bar_editar_direccion" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/bar_editar_relacion"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/relacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/relacion" >
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/bar_editar_acompanante"
                android:textStyle="bold" >
            </TextView>

            <Spinner
                android:id="@+id/acompanante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/acompanante" >
            </Spinner>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="15dp"
            android:text="@string/bar_editar_fecha_visita"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:id="@+id/linearLayout11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="Primera: "/>

            <TextView
                android:id="@+id/primeraFechaEtiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=" 12/12/2011" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/libro_editar_boton_fecha_primera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="Cambiar fecha"
                    android:gravity="center" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="Última: " />

            <TextView
                android:id="@+id/ultimaFechaEtiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="12/12/2011" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/libro_editar_boton_fecha_ultima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Cambiar fecha"
                    android:layout_alignParentRight="true"
                    android:gravity="center" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/bar_editar_valoracion"
            android:textStyle="bold" >
        </TextView>

        <RatingBar
            android:id="@+id/libro_editar_valoracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:text="@string/bar_editar_precio"
                android:textStyle="bold" >
            </TextView>

            <EditText
                android:id="@+id/libro_editar_precio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bar_editar_precio" >
            </EditText>
        </LinearLayout>

        <EditText
            android:id="@+id/libro_editar_notas"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="top"
            android:hint="@string/bar_editar_notas" >
        </EditText>

        <Button
            android:id="@+id/libro_editar_boton_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/boton_aceptar"
            android:gravity="center">
        </Button>
    </LinearLayout>

</ScrollView>